--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<form onsubmit=" return validate()" 
-	action="index.html";>
+	action="glavna.html";>
 		<input id="uname" placeholder="Korisnicko ime" type="text"/><br><br>
 		<input id="pass" placeholder="Lozinka" type="password"/><br><br>
 		<button  type="submit">Uloguj se</button>
